Change comete to laboratoire

--- a/Structure/cv_long.html
+++ b/Structure/cv_long.html
@@ -12,7 +12,7 @@
 
 <div class="navbar">
   <a href="../index.html" >Accueil</a>
-  <a href="http://comete.unicaen.fr/membres/chercheurs-et-enseignants-chercheurs/cv-leslie-decker-964300.kjsp" target="_blank">Comete</a>
+  <a href="http://comete.unicaen.fr/membres/chercheurs-et-enseignants-chercheurs/cv-leslie-decker-964300.kjsp" target="_blank">Laboratoire</a>
   <a href="https://scholar.google.com/citations?user=IvuCsQ8AAAAJ&hl=en&oi=ao" target="_blank">Publications</a>
   <a href="https://twitter.com/DeckerLeslie18" target="_blank">Twitter</a>
   <a href="cv_court.html">CV court</a>
