update team page

--- a/index.html
+++ b/index.html
@@ -1,37 +1,208 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
 <title>Leslie Decker</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="Structure/CSS_layout.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="CSS_layout.css" media="screen" />
+<style>
+.teammate {
+  display: inline-block;
+}
+</style>
 </head>
+
 
 
 <body>
 
+
 <div class="navbar">
-  <a href="http://comete.unicaen.fr/membres/chercheurs-et-enseignants-chercheurs/cv-leslie-decker-964300.kjsp" target="_blank">Laboratoire</a>
+  <a href="../index.html" >Accueil</a>
+  <a href="http://comete.unicaen.fr/membres/chercheurs-et-enseignants-chercheurs/cv-leslie-decker-964300.kjsp" target="_blank">Comete</a>
   <a href="https://scholar.google.com/citations?user=IvuCsQ8AAAAJ&hl=en&oi=ao" target="_blank">Publications</a>
   <a href="https://twitter.com/DeckerLeslie18" target="_blank">Twitter</a>
-  <a href="Structure/cv_court.html">CV court</a>
-  <a href="Structure/cv_long.html">CV complet</a>
+  <a href="cv_court.html">CV court</a>
+  <a href="cv_long.html">CV complet</a>
 </div>
 
-<div class="container">
-  <br>
+<p align="center" style="color:#0000FF"> <b>COLLABORATEUR</b> </p>
+
+<div class="teammate">
   <br>
   <div class="image">
-  <img src='Images/profil.jpg' width='175px' border='3px solid black' alt='Profil'>
-  <figcaption><b>Decker Leslie, MCU, HDR</b></figcaption>
+  <img src='../Images/fabien.jpg'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <figcaption><b>Dr. Fabien Cignetti</b></figcaption>
   </div>
 
   <div class="text">
-    <p align="justify"> Mon parcours scientifique s’est construit autour de l’étude du comportement sensorimoteur chez l’Homme. Mes travaux de recherche visent à enrichir la compréhension des mécanismes cognitifs et sensorimoteurs qui sous-tendent les réorganisations adaptatives du contrôle de l'équilibre postural et locomoteur au cours du vieillissement normal et pathologique. J’aborde ce thème unificateur à travers les champs disciplinaires des neurosciences, depuis la biomécanique du mouvement humain, incluant la théorie des systèmes dynamiques, jusqu’à la neuropsychologie cognitive. Je développe des paradigmes de manipulation des contraintes (e.g. paradigme de double tâche, paradigme split-belt i.e. adaptation-rétention du patron de marche sur tapis roulant à double bande, vibrations tendineuses, oscillations lentes du support, perturbation du flux optique en réalité virtuelle) qui, couplés à l’étude de pathologies d’origine centrale (e.g. Alzheimer, Parkinson) ou périphérique (e.g. syndrome d’Ehlers-Danlos de type hypermobile), me permettent d’appréhender le contrôle sensorimoteur à l’interface du vécu de l’individu (« dynamique lente ») et de changements contextuels (« dynamique rapide »). <br>
-      Les connaissances développées en recherche fondamentale et clinique visent à l’identification de marqueurs prédictifs de pathologies liées au vieillissement (<a href="https://www.unicaen.fr/projet_de_recherche/presage/" target="_blank">PRESAGE</a>, HANDIFORM) ou d’efficacité thérapeutique (<a href="https://www.unicaen.fr/projet_de_recherche/vitalised/" target="_blank">VITALISED</a>) et au développement de stratégies de reconditionnement (REPOSED). Ma recherche revêt aussi une dimension e-santé forte, incluant la conception de systèmes d’aide à la décision médicale, i.e. diagnostic, pronostic, orientation de la prise en charge (OVERCOME), et la validation de dispositifs médicaux de suppléance des fonctions sensori-motrices défaillantes (thèse <a href="https://fr.wikipedia.org/wiki/Convention_industrielle_de_formation_par_la_recherche" target="_blank">CIFRE</a> en collaboration avec l’entreprise NOVATEX MEDICAL).  </p>
-    <p> <b>Contact :</b> leslie [point] decker [arobase] unicaen [point] fr</p>
+    <p align="justify">Dr. Fabien CIGNETTI is associate professor of Neuroscience at Université Grenoble Alpes since 2017. Prior to this position, he completed postdoctoral training in Neurosciences at Université Aix-Marseille (2012-2017) and in Biomechanics at the University of Nebraska Omaha (2009-2011). He received a PhD in Motor Control at the Université Savoie-Mont Blanc and Università di Trento in 2009.<br>
+    Dr. Fabien CIGNETTI is broadly interested in the relationship between brain connectivity and motor control in typical and atypical development. Within a cognitive neuroscience framework, his research investigates how improvement in motor control over short (motor learning) to long (motor development) timescales is driven by changes in structural and functional connectivity among brain networks. His research combines multimodal MRI and electroencephalography, psychophysical experiments and computational tools.<br>
+    Dr. Fabien CIGNETTI serves as a co-PI on the PRESAGE project being in charge of coordinating the MRI work package and serving also as support in the Virtual Reality work package<br>
+    </p>
+    <p> <a href="https://www.researchgate.net/profile/Fabien-Cignetti" target="_blank">Plus d'information sur Fabien</a> 
+    </p>
+    <p> <b>Contact :</b> Fabien [point] Cignetti [arobase] univ-grenoble-alpes [point] fr</p>
+  </div>
 </div>
+<br>
+
+
+
+<p align="center" style="color:#0000FF"> <b>POST-DOCTORANTS </b> </p>
+
+
+<div class="teammate">
+  <br>
+  <div class="image">
+  <img src='../Images/vincent.jpg'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <figcaption><b>Dr. Cabibel Vincent</b></figcaption>
+  </div>
+
+  <div class="text">
+    <p align="justify">I obtained a MSc degree from the University of Montpellier (France) where I examined the effects of neuromodulation on the interhemispheric interactions in healthy individuals; then a PhD where I explored the brain-related mechanisms of muscle weakness in the particular context of chronic obstructive pulmonary disease. I am currently investigating predictors of dementia apparition throughout interactions between movement analysis, executive functions and neuroimaging (in Caen, France)</p>
+    <p> <a href="https://www.researchgate.net/profile/Vincent-Cabibel" target="_blank">Plus d'information sur Vincent</a> </p>
+    <p> <b>Contact :</b> vincent [point] cabibel [arobase] unicaen [point] fr</p>
+  </div>
 </div>
+<br>
+<br>
+<br>
+
+
+<div class="teammate">
+  <br>
+  <div class="image">
+  <img src='../Images/remi.jpg'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <figcaption><b>Dr. Rémi Laillier</b></figcaption>
+  </div>
+
+  <div class="text">
+    <p align="justify">Remi obtained his PhD at the NIMH1077 in Caen on cognition and brain imaging in normal and pathological aging. He is now working both as a researcher and a neuropsychologist for the Presage project.</p>
+    <p> <a href="http://comete.unicaen.fr/membres/personnels-administratifs-et-techniques/cv-remi-laillier-1094884.kjsp" target="_blank">Plus d'information sur Rémi</a> </p>
+    <p> <b>Contact :</b> remi [point] laillier [arobase] unicaen [point] fr</p>
+  </div>
+</div>
+<br>
+<br>
+<br>
+
+
+<div class="teammate">
+  <br>
+  <div class="image">
+  <img src='../Images/jeremy.PNG' width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <figcaption><b>Dr. Jérémy Lefort-Besnard</b></figcaption>
+  </div>
+
+  <div class="text">
+    <p align="justify">After studying psychology at the university of Tours (France) and Bucknell (USA), I pursued a PhD in computational neuroscience supervised by Danilo Bzdok (McGill, Canada) and Danielle Basset (UPENN, USA) and supported by a PhD scholarship of the International Research Training Group (DFG-IRTG 2150). Next, I worked as a postdoc in Chi-Chun Lee's BIIC lab in Hsinchu (Taiwan), where we focused on learning predictive models based on behaviors, brain-region and brain-network priors using machine-learning tools such as semi-supervision and structured sparsity penalties. I recently moved back to France and joined the Inserm Comete laboratory team of Leslie Decker to identify markers that predict transition to Alzheimer's disease or related dementia.<br>
+    I received intensive training in machine learning and brain imaging working in collaboration with Gaël Varoquaux (INRIA, Paris, France) and Simon Eickhoff (Düsseldorf, Germany). Being supervised by academics from very different fields (medicine, computer science, and physics) really made clear that I have a deep interest for combination of rigorous methodology and innovating approach to investigate psychopathology. <br>
+    </p>
+    <p> <a href="https://jlefortbesnard.github.io/" target="_blank">Plus d'information sur Jérémy</a> </p>
+    <p> <b>Contact :</b> jeremy [point] lefort-besnard [arobase] unicaen [point] fr</p>
+  </div>
+</div>
+<br>
+<br>
+<br>
+
+<p align="center" style="color:#0000FF"> <b>INGENIEUR DE RECHERCHE</b> </p>
+
+<div class="teammate">
+  <br>
+  <div class="image">
+  <img src='../Images/edouard.jpg'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <figcaption><b>Edouard Gouteux</b></figcaption>
+  </div>
+
+  <div class="text">
+    <p align="justify">With a master's degree in Data Science and Engineering and an engineering degree in Mathematics and Computer Science, I have a keen interest in data science and statistics.</p>
+    <p> <a href="https://www.linkedin.com/in/edouard-gouteux-6b09ab171/" target="_blank">Plus d'information sur Edouard</a> </p>
+    <p> <b>Contact :</b> edouard [point] gouteux [arobase] unicaen [point] fr</p>
+  </div>
+</div>
+<br>
+<br>
+<br>
+
+
+
+
+
+<p align="center" style="color:#0000FF"> <b>DOCTORANTS </b> </p>
+
+<div class="teammate">
+  <br>
+  <div class="image">
+  <img src='../Images/tristan.png'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <figcaption><b>Tristan Regueme</b></figcaption>
+  </div>
+
+  <div class="text">
+    <p align="justify">PhD Student in human movement science, Tristan has a great interest for locomotion analysis using immersive virtual reality (i.e. locomotor adaptation to sensory and/or cognitive constraints on the GAIT system and instrumented treadmill). </p>
+    <p> <a href="https://twitter.com/TristanRegueme" target="_blank">Plus d'information sur Tristan</a> </p>
+    <p> <b>Contact :</b> tristan [point] regueme [arobase] unicaen [point] fr</p>
+  </div>
+</div>
+<br>
+<br>
+<br>
+
+
+<div class="teammate">
+  <br>
+  <div class="image">
+  <img src='../Images/valentin.png'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <figcaption><b>Valentin Lana</b></figcaption>
+  </div>
+
+  <div class="text">
+    <p align="justify">Ehlers-Danlos syndrome is a mixed group of hereditary diseases whose common feature is a genetic alteration of the connective tissue. The hypermobile type (hEDS) is characterized by generalized joint hypermobility and skin hyperelasticity, which causes somesthesia disorders. The aim of my thesis is to better understand the modulation of muscle synergies underlying locomotor strategies in response to these disorders, and to evaluate the effect of somesthetic perceptual support (i.e., wearing of compressive garments) during sensorimotor reprogramming (i.e., proprioceptive physical therapy) on the modulation of muscle synergies. On a more fundamental level, my work will aim to verify the potential links between the concepts of behavioral complexity (i.e., nonlinear dynamic analysis of kinematic and kinetic fluctuations) and motor control complexity (i.e., number of muscle synergies) during locomotion.</p>
+    <p> <a href="https://www.linkedin.com/in/valentin-lana-90355a1a8/?originalSubdomain=fr" target="_blank">Plus d'information sur Valentin</a> </p>
+    <p> <b>Contact :</b> valentin [point] lana [arobase] unicaen [point] fr</p>
+  </div>
+</div>
+<br>
+<br>
+<br>
+
+
+
+<p align="center" style="color:#0000FF"> <b>MASTER </b> </p>
+
+
+<div class="teammate">
+  <br>
+  <div class="image">
+  <img src='../Images/baptiste.png'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <figcaption><b>Baptiste Perthuy</b></figcaption>
+  </div>
+</div>
+
+<div class="teammate">
+  <br>
+  <div class="image">
+  <img src='../Images/noemie.png'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <figcaption><b>Noémie Oudot-Morot</b></figcaption>
+  </div>
+</div>
+
+<div class="teammate">
+  <br>
+  <div class="image">
+  <img src='../Images/avatar.png'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <figcaption><b>Hugo Thomas</b></figcaption>
+  </div>
+</div>
+
+
+
+<br>
+<br>
+<br>
+
+
 
 </body>
 </html>
