--- a/Structure/cv_court.html
+++ b/Structure/cv_court.html
@@ -12,10 +12,11 @@
 
 <div class="navbar">
   <a href="../index.html" >Accueil</a>
-  <a href="http://comete.unicaen.fr/membres/chercheurs-et-enseignants-chercheurs/cv-leslie-decker-964300.kjsp" target="_blank">Laboratoire</a>
+  <a href="http://comete.unicaen.fr/membres/chercheurs-et-enseignants-chercheurs/cv-leslie-decker-964300.kjsp" target="_blank">Comete</a>
   <a href="https://scholar.google.com/citations?user=IvuCsQ8AAAAJ&hl=en&oi=ao" target="_blank">Publications</a>
   <a href="https://twitter.com/DeckerLeslie18" target="_blank">Twitter</a>
-  <a href="cv_long.html">CV complet</a>
+  <a href="cv_court.html">CV complet</a>
+  <a href="team.html">Equipe scientifique</a>
 </div>
 <div>
     <p align="center"><a href="../Images/CV_court.pdf" target="_blank"> ॰  Télécharger le pdf</a></p>
