change format pic

--- a/Structure/team.html
+++ b/Structure/team.html
@@ -135,7 +135,7 @@
 <div class="teammate">
   <br>
   <div class="image">
-  <img src='../Images/tristan.png'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <img src='../Images/tristan.PNG'  width='175px' height='175px' border='3px solid black' alt='Profil'>
   <figcaption><b>Tristan Regueme</b></figcaption>
   </div>
 
@@ -153,7 +153,7 @@
 <div class="teammate">
   <br>
   <div class="image">
-  <img src='../Images/valentin.png'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <img src='../Images/valentin.PNG'  width='175px' height='175px' border='3px solid black' alt='Profil'>
   <figcaption><b>Valentin Lana</b></figcaption>
   </div>
 
@@ -175,7 +175,7 @@
 <div class="teammate">
   <br>
   <div class="image">
-  <img src='../Images/baptiste.png'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <img src='../Images/baptiste.PNG'  width='175px' height='175px' border='3px solid black' alt='Profil'>
   <figcaption><b>Baptiste Perthuy</b></figcaption>
   </div>
 </div>
@@ -183,7 +183,7 @@
 <div class="teammate">
   <br>
   <div class="image">
-  <img src='../Images/noemie.png'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <img src='../Images/noemie.PNG'  width='175px' height='175px' border='3px solid black' alt='Profil'>
   <figcaption><b>Noémie Oudot-Morot</b></figcaption>
   </div>
 </div>
@@ -191,7 +191,7 @@
 <div class="teammate">
   <br>
   <div class="image">
-  <img src='../Images/avatar.png'  width='175px' height='175px' border='3px solid black' alt='Profil'>
+  <img src='../Images/avatar.PNG'  width='175px' height='175px' border='3px solid black' alt='Profil'>
   <figcaption><b>Hugo Thomas</b></figcaption>
   </div>
 </div>
