--- a/Structure/team.html
+++ b/Structure/team.html
@@ -9,6 +9,13 @@
 .teammate {
   display: inline-block;
 }
+figcaption {
+  background-color: black;
+  color: white;
+  font-style: italic;
+  padding: 2px;
+  text-align: center;
+}
 </style>
 </head>
 
