--- a/Structure/cv_court.html
+++ b/Structure/cv_court.html
@@ -15,7 +15,7 @@
   <a href="http://comete.unicaen.fr/membres/chercheurs-et-enseignants-chercheurs/cv-leslie-decker-964300.kjsp" target="_blank">Comete</a>
   <a href="https://scholar.google.com/citations?user=IvuCsQ8AAAAJ&hl=en&oi=ao" target="_blank">Publications</a>
   <a href="https://twitter.com/DeckerLeslie18" target="_blank">Twitter</a>
-  <a href="cv_court.html">CV complet</a>
+  <a href="cv_long.html">CV complet</a>
   <a href="team.html">Equipe scientifique</a>
 </div>
 <div>
